update the some files

--- a/src/components/Men.css
+++ b/src/components/Men.css
@@ -1,5 +1,12 @@
-.image_mens{
-    width: 100%;
-    height: auto;
+.main_div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
-
+.men_main_div{
+    display: flex;
+    justify-content: space-evenly;
+}
+.image_menss{
+    width: 100%;
+}
