--- a/src/Footer.css
+++ b/src/Footer.css
@@ -9,12 +9,22 @@
     justify-content: space-evenly;
     align-items: stretch; */
     /* position: fixed; */
-    padding: 30px 10px 0px 10px;
+    /* padding: 30px 10px 0px 10px;
     bottom: 0;
-    width: 100%;
+    width: 100%; */
     /* Height of the footer*/ 
-    height: 100px;
+    /* height: 100px; */
     background: rgb(58, 54, 54);
+
+
+    /*  */
+    position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height: 100px;
+   color: white;
+   text-align: center;
 }
 .a_tag_footer{
     color: #c8cbcc;
